Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104469

Assertion failure when clearing model in Component.onCompleted of delegate in Repeater

XMLWordPrintable

    • e9f631b09 (dev), 199fb8b75 (6.6), f597052b4 (6.5)

      import QtQuick
      
      Window {
          id: window
          width: 640
          height: 480
          visible: true
      
          Repeater {
              id: repeater
              model: 1
              delegate: Item {
                  Component.onCompleted: repeater.model = 0
              }
          }
      }
      
      ASSERT: "objectRef == 0" in file /Users/mitch/dev/qt-dev/qtdeclarative/src/qmlmodels/qqmldelegatemodel.cpp, line 2313
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes